# dixvision-v42.2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUDIT_AND_ROADMAP.md  DASHBOARD_SPEC.md  DIX VISION v42.2 – CANONICAL BUILD PLAN.txt  DIX VISION v42.2 – CANONICAL SYSTEM MANIFEST.txt  DIX VISION v42.2 – COMPLETE EXECUTIVE SUMMARY.txt  Dockerfile  Makefile  README.md  bootstrap_kernel.py  bootstrap_kernel.txt  build.ps1  diagnose_foundation.py  dix.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements-ml  requirements-windows.txt  requirements.txt  run.ps1  start.py  startup_test.py  trading.py
cloud/: Caddyfile  fly.toml  railway.json  render.yaml
cockpit/: __init__.py  __main__.py  app.py  auth.py  charter.py  chat.py  launcher.py  llm.py  pairing.py  qr.py
contracts/: README.md  events.proto  execution.proto  governance.proto  ledger.proto  market.proto  system.proto
core/: __init__.py  authority.py  causal_graph.py  charter.py  exceptions.py  introspection.py  registry.py  secrets.py  single_instance.py
dash_meme/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
dashboard2026/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
dashboard_backend/: __init__.py
docs/: ARCHITECTURE_V42_2_TIER0.md  CAUSAL_CONTRACT.md  CLOUD.md  DEX_AND_BOT_ADAPTER_ROADMAP.md  DIX_VISION_v42_2_COMPILED.md  INDIRA_WEB_AUTOLEARN_SPEC.md  INSTALL.md  MEMECOIN_TRADING_SPEC.md  MOBILE.md  NEUROMORPHIC_TRIAD_SPEC.md  OPTIMIZATION_PLAN.md  PHASE_0_ATTESTATION.md  PR2_SPEC.md  SANDBOX.md  TOTAL_VALIDATION_SPEC.md  autohedge_role_mapping.md  build_status.md  canonical_pipeline.md  dashboard_2026_wave03_cognitive_plan.md  dependency_roadmap.md  directory_tree.md  lava_event_driven_patterns.md  manifest_v3.1_delta.md  manifest_v3.2_delta.md  manifest_v3.3_delta.md  manifest_v3.4_delta.md  manifest_v3.5.1_delta.md  manifest_v3.5.2_delta.md  manifest_v3.5.3_delta.md  manifest_v3.5.4_delta.md  manifest_v3.5.5_delta.md  manifest_v3.5_delta.md  manifest_v3.6.0_delta.md  manifest_v3.6.1_delta.md  manifest_v3.6.2_delta.md  manifest_v3.6.3_delta.md  manifest_v3.6.4_delta.md  promotion_gates.yaml  rust_revival_schedule.yaml  sourcegraph_dyon_usage.md  (+2 more)
enforcement/: __init__.py  decorators.py  kill_switch.py  policy_enforcer.py  resource_enforcer.py  runtime_guardian.py
evolution_engine/: __init__.py  critique_loop.py  engine.py  experiment_tracking.py  gym_env.py  pipeline.py  rllib_trainer.py  sandbox.py  sandbox_elegant.py  sandbox_sample_factory.py  sandbox_tianshou.py
execution/: __init__.py  adapter_router.py  circuit_breaker.py  emergency_executor.py  engine.py  feedback.py  mev_guard.py  runtime_monitor.py  slippage.py  system_repair_orchestrator.py  tca.py  trade_executor.py
execution_engine/: __init__.py  engine.py  execution_gate.py
governance/: __init__.py  charter.py  constraint_compiler.py  emergency_policy.py  kernel.py  mode_manager.py  patch_pipeline.py  policy_engine.py  risk_engine.py
governance_engine/: __init__.py  engine.py  harness_approver.py  strategy_registry.py
immutable_core/: __init__.py  axioms.py  constants.py  foundation.hash  foundation.py  genesis.json  hazard_axioms.lean  kill_switch.py  neuromorphic_axioms.lean  safety_axioms.lean  system_identity.py
intelligence_engine/: __init__.py  causal_dowhy.py  diag_arviz.py  engine.py  hmm_hmmlearn.py  hte_econml.py  learning_gate.py  learning_interface.py  pgm_pgmpy.py  runtime_context.py  runtime_context_builder.py  signal_pipeline.py  svi_numpyro.py  svi_pyro.py  uplift_causalml.py
interrupt/: __init__.py  dispatcher.py  interrupt_executor.py  policy_cache.py  resolver.py
learning_engine/: __init__.py  engine.py  update_emitter.py
mind/: __init__.py  charter.py  custom_strategies.py  engine.py  execution_router.py  fast_execute.py  intent_producer.py  knowledge_store.py  order_manager.py  portfolio_manager.py  risk_cache.py  strategy_arbiter.py
observability/: __init__.py
opponent_model/: __init__.py  behavior_predictor.py
registry/: agent_rationale_tags.yaml  agent_state_keys.yaml  authority_matrix.yaml  confidence.yaml  constraint_rules.yaml  data_source_registry.yaml  engines.yaml  external_signal_trust.yaml  macro_regime.yaml  opponent_behavior.yaml  plugins.yaml  portfolio_allocator.yaml  position_sizer.yaml  pressure.yaml  regime.yaml  reward_shaping.yaml  trader_archetypes.yaml
risk/: __init__.py  engine.py
rust/: Cargo.toml  README.md
rust/bootstrap/: Cargo.toml
rust/bootstrap/src/: lib.rs
rust/execution/: Cargo.toml
rust/execution/src/: circuit_breaker.rs  fast_execute.rs  hazard.rs  lib.rs
rust/py_execution/: Cargo.toml  pyproject.toml
rust/py_execution/src/: lib.rs
rust/py_system/: Cargo.toml  pyproject.toml
rust/py_system/src/: lib.rs
rust/system/: Cargo.toml
rust/system/src/: fast_risk_cache.rs  lib.rs  metrics.rs  time_source.rs
scripts/: check_credentials.py  generate_hash.py
security/: __init__.py  audit_trail.py  authentication.py  authorization.py  encryption.py  keyring_adapter.py  operator.py  secrets_manager.py  wallet_connect.py  wallet_policy.py
sensory/: __init__.py
simulation/: __init__.py  backtester.py  crowd_density.py  distributed_runner.py  drawdown_walk.py  engine.py  event_replayer.py  fee_inversion.py  fill_starvation.py  flash_crash_synth.py  impact_feedback.py  latency_jitter.py  liquidity_decay.py  news_shock_sim.py  oracle_lag.py  order_book_decay.py  parallel_runner.py  partial_fill_chaos.py  regime_switch_sim.py  slippage_walk.py  stop_hunter.py
simulation_engine/: __init__.py  latency_model.py  slippage_model.py
state/: __init__.py  episodic_memory.py  feature_store.py  knowledge_graph.py  knowledge_graph_queries.py  knowledge_store.py  knowledge_store_llamaindex.py  knowledge_store_memgraph.py  (+1 more)
system/: config.py  (+22 more)
tools/rust_bridge/: Cargo.toml  README.md
tools/rust_bridge/src/: lib.rs
(+1306 files in other folders)
