[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dixvision"
version = "0.0.1"
description = "DIX VISION v42.2 — engine + plugin runtime (Phase E0)"
requires-python = ">=3.11"
license = { text = "Proprietary" }
readme = "README.md"
authors = [{ name = "Ronald Vervoort" }]
dependencies = [
    "PyYAML>=6.0",
    # wave-03 cognitive layer is imported unconditionally by
    # ``ui.cognitive_chat_runtime`` (which ``ui.server`` imports at module
    # load), so these MUST be base runtime deps. Hiding them in extras
    # was correct only while the runtime was opt-in (PR #82); it stopped
    # being correct at PR #85 when the runtime moved into ui.server's
    # import graph.
    "langchain-core>=0.3,<1",
    "langgraph>=0.2,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.25",
    "pydantic>=2.0",
    "websockets>=12.0",
]
cognitive = [
    # Kept as a no-op alias for backward compatibility with any
    # external automation that did ``pip install -e .[cognitive]``.
    # The actual deps are now in [project.dependencies].
]
ui = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "websockets>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "intelligence_engine*",
    "execution_engine*",
    "system_engine*",
    "governance_engine*",
    "learning_engine*",
    "evolution_engine*",
    "state*",
    "tools*",
    "ui*",
]
exclude = ["tests*", "rust*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "rust",
    "docs",
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    # Phase E0 stubs intentionally have unused parameters.
    "B008",
]
