[package]
name        = "dixvision-execution"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "DIX VISION v42.2 — execution domain (Dyon). Exchange adapters, hazard sensors, chaos engine. Per manifest §EXECUTION (RUST — Dyon / RUNTIME SAFETY)."

[lib]
name = "dixvision_execution"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
