[package]
name        = "dixvision-system"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description = "DIX VISION v42.2 — system control plane. FastRiskCache, StateReconstructor, Snapshots, TimeSource, KillSwitch, LoadController, config family, metrics. Per manifest §SYSTEM (RUST — CONTROL PLANE)."

[lib]
name = "dixvision_system"
path = "src/lib.rs"

[dependencies]
thiserror   = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
